# zero2prod

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: zero2prod.yaml
configuration/: production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
